syntax = "proto3";

package blockexplorer.api.v1;

option go_package = "code.vegaprotocol.io/vega/protos/blockexplorer/api/v1";
import "vega/commands/v1/transaction.proto";

service BlockExplorerService {
    rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse) {}
    rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse) {}
 }

message GetTransactionRequest {
  string hash = 1;
}

message GetTransactionResponse{
  Transaction transaction = 1;
}

message ListTransactionsRequest {
    uint32 limit = 1;
    optional string before = 2;
    optional string after = 3;
    map<string, string> filters =4;
}

message ListTransactionsResponse{
    repeated Transaction transactions = 3;
}

message Transaction {
    uint64 block = 1;
    uint32 index = 2;
    string hash = 3;
    string submitter = 4;
    string type = 5;
    uint32 code = 6;
    string cursor = 7;
    vega.commands.v1.InputData command = 8;
}

